--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@nextui-org/react": "^2.1.13",
     "@tanstack/react-query": "^4.32.0",
     "firebase": "^10.4.0",
     "firebaseui": "^6.1.0",
+    "framer-motion": "^10.16.4",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
