--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
     "react-image-zoom": "^1.3.1",
     "react-rating": "^2.0.5",
