--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^2.1.2",
     "@nextui-org/react": "^2.1.13",
     "@tanstack/react-query": "^4.32.0",
     "firebase": "^10.4.0",
