--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-custom-scroll": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
