--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-tailwind/react": "^2.1.2",
     "@nextui-org/react": "^2.1.13",
     "@tanstack/react-query": "^4.32.0",
+    "axios": "^1.6.1",
     "firebase": "^10.4.0",
     "firebaseui": "^6.1.0",
     "framer-motion": "^10.16.4",
