--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.2",
     "@nextui-org/react": "^2.1.13",
+    "@nextui-org/slider": "^2.2.5",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.6.1",
     "firebase": "^10.4.0",
@@ -42,6 +43,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^4.0.8",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
