--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^10.16.4",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-custom-scroll": "^5.0.0",
