--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/slider": "^2.2.5",
     "@tanstack/react-query": "^4.32.0",
+    "apexcharts": "^3.44.0",
     "axios": "^1.6.1",
     "firebase": "^10.4.0",
     "firebaseui": "^6.1.0",
@@ -27,6 +28,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-custom-scroll": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
@@ -37,6 +39,7 @@
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.2",
+    "recharts": "^2.10.1",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.0"
