--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-tabs": "^6.0.2",
     "recharts": "^2.10.1",
     "slick-carousel": "^1.8.1",
+    "smooth-scrollbar": "^8.8.4",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.0"
   },
