--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.2",
     "recharts": "^2.10.1",
     "slick-carousel": "^1.8.1",
